themen/style.css
/* poppins-regular - latin */
@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    src: url('assets/fonts/poppins-v20-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
body {
    margin: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    font-size: 25px;
    overflow-x: hidden;
}
#topics {
    display: flex;
    flex-direction: row;
    width: 200vw;
}
.topic {
    width: 100vw;
    transition: all 0.5s ease;
}
.head {
    padding: 10vh 10vw;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}
#head-one {
    background-image: url("assets/img/markus-spiske-iar-afB0QQw-unsplash.jpg"); 
}
#head-two {
    background-image: url("assets/img/joshua-sukoff-5DDYHjk_KMU-unsplash.jpg"); 
}
.switch-btn {
    border: 0px #000;
    position: absolute;
    top: 50%;
    width: 50px;
    height: 100px;
    background-color: #000;
    color: #fff;
    font-weight: bolder;
    font-size: larger;
    transition: 0.5s ease;
}
.switch-btn.active {
    opacity: 100%;
}
.switch-btn:hover {
    cursor: pointer;
    color: #33ff00;
}
#switch-btn-one {
    right: 0;
    border-radius: 20px 0 0 20px;
}
#switch-btn-two {
    right: -50px;
    border-radius: 0 20px 20px 0;
}
.cnt {
    margin: 0 10vw;
}
h1 {
    font-size: 3rem;
    font-weight: 900;
    margin: 0;
}
#heading-one {
    color: #fff;
}
.bold {
    font-weight: 900;
}
footer {
    font-size: 20px;
    height: 60px;
    width: 100vw;
    text-align: center;
}
@media screen and (max-width: 600px) {
    body, html {
        font-size: 20px;
    }
    h1 {
        font-size: 2rem
    }
}

